<resources>
    <string name="app_name">teacher_everywhere</string>
    <string name="get_more_seriver">你好，为了获取更好的服务</string>
    <string name="login_trave">请登录伴米旅行</string>
    <string name="country_code">+86</string>
    <string name="call_phone">请输入手机号</string>
    <string name="send_code">发送验证码</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="string_or">or</string>
    <string name="wachat_login">微信登录</string>
    <string name="agree_protocol">登录注册即同意伴米旅行用户协议</string>
    <string name="send_again">重新发送</string>

    <string name="input_verify">请输入验证码</string>

    <string name="wait_please">请稍后...</string>
</resources>
