<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        android:src="@mipmap/back_white"
        android:id="@+id/back"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_35"/>
    <TextView
        android:textSize="@dimen/sp_16"
        android:textColor="@color/c_FA6A13"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_below="@id/back"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_width="wrap_content"
        android:id="@+id/services"
        android:layout_height="wrap_content"
        android:text="@string/get_more_seriver"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_9"
        android:layout_marginLeft="@dimen/dp_23"
        android:textColor="@color/c_373737"
        android:layout_below="@id/services"
        android:id="@+id/login"
        android:textSize="@dimen/sp_27"
        android:text="@string/login_trave"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_below="@id/login"
        android:layout_marginTop="@dimen/dp_104"
        android:layout_marginRight="@dimen/dp_23"
        android:gravity="center_vertical"
        android:id="@+id/ll_container"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:src="@drawable/phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/country_code"
            android:layout_marginLeft="@dimen/dp_8"
            android:textColor="@color/c_636363"
            android:textSize="@dimen/sp_14"
            android:text="@string/country_code"/>
        <ImageView
            android:layout_width="@dimen/dp_7"
            android:layout_height="@dimen/dp_5"
            android:id="@+id/selects"
            android:background="@drawable/select"
            android:layout_marginLeft="@dimen/dp_2"/>
        <EditText
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/et_phone"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/c_636363"
            android:hint="@string/call_phone"
            />
        <Button
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_30"
            android:textSize="@dimen/sp_14"
            android:text="@string/send_code"
            android:id="@+id/send_code"
            android:textColor="@color/c_fefefe"
            android:background="@drawable/bg_btn_ea_r15"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/c_FA6A13"
        android:id="@+id/ll_view"
        android:layout_below="@id/ll_container"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"></View>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_or"
        android:gravity="center_vertical"
        android:layout_below="@id/ll_view"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_140">
        <View
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"
            android:background="@drawable/gra_d8_a9"></View>
        <TextView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_5"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c_a9a9a9"
            android:text="@string/string_or"/>
        <View
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"
            android:background="@drawable/gra_a9_d8"
            android:layout_marginLeft="@dimen/dp_5"
            ></View>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_or"
        android:id="@+id/logins"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:id="@+id/wechat"
            android:src="@drawable/wechat"/>
        <ImageView
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:id="@+id/qq"
            android:src="@drawable/qq"/>
        <ImageView
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:id="@+id/sina"
            android:src="@drawable/sina"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wachat_login"
        android:layout_marginTop="@dimen/dp_9"
        android:textSize="@dimen/sp_12"
        android:id="@+id/wachat_login"
        android:textColor="@color/c_4DAE46"
        android:layout_below="@id/logins"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_protocol"
        android:layout_marginTop="@dimen/dp_66"
        android:layout_below="@id/wachat_login"
        android:textSize="@dimen/sp_13"
        android:id="@+id/agree"
        android:layout_centerHorizontal="true"
        android:textColor="@color/c_999999"/>

</RelativeLayout>
