<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_35"
        >
        <ImageView
            android:layout_width="@dimen/dp_25"
            android:id="@+id/iv_back"
            android:src="@drawable/back_white"
            android:layout_height="@dimen/dp_25" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/c_999999"
            android:textSize="@dimen/sp_14"
            android:layout_centerVertical="true"
            android:id="@+id/tv_send_again"
            android:layout_alignParentRight="true"
            android:text="@string/send_again"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_23"
        android:text="@string/input_verify"
        android:textSize="@dimen/sp_27"
        android:textColor="@color/c_373737"/>
    <com.example.teacher_everywhere.widget.IdentifyingCodeView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_56"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_83"
        android:id="@+id/icv"
        app:icv_et_number="4"
        app:icv_et_width="@dimen/dp_44"
        app:icv_et_divider_drawable="@drawable/divider_icv"
        app:icv_et_text_color="@color/c_636363"
        app:icv_et_text_size="@dimen/sp_20"
        app:icv_et_height="@dimen/dp_56"
        ></com.example.teacher_everywhere.widget.IdentifyingCodeView>
    <TextView
        android:text="@string/wait_please"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_33"
        android:id="@+id/tv_wait"
        android:textColor="@color/c_fa6a13"
        android:textSize="@dimen/sp_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
